# mlops_mnist

./: .gitignore  Dockerfile  README.md  checkpoints.dvc  docker-compose.yaml  infer.py  pyproject.toml  train.py
.dvc/: config
classifier/: classifier.py
conf/: config.yaml
model_dir/: MLmodel  conda.yaml  python_model.pkl
