[tool.poetry]
name = "mlops-mnist"
version = "0.1.0"
description = ""
authors = ["Aznaur <aliev.ak@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
hydra-core = "^1.3.2"
config = "^0.5.1"
dvc = {extras = ["gdrive"], version = "^3.27.0"}
mlflow = "^2.8.1"
lightning = "^2.1.2"
ngrok = "^0.12.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
